WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232221
[App Privacy Report] CORS preflight requests attributed incorrectly
https://bugs.webkit.org/show_bug.cgi?id=232221
Summary
[App Privacy Report] CORS preflight requests attributed incorrectly
Kate Cheney
Reported
2021-10-24 16:05:18 PDT
[App Privacy Report] CORS preflight requests attributed incorrectly
Attachments
Patch
(11.59 KB, patch)
2021-10-24 16:08 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kate Cheney
Comment 1
2021-10-24 16:08:47 PDT
Created
attachment 442328
[details]
Patch
Kate Cheney
Comment 2
2021-10-24 16:09:01 PDT
rdar://84116159
Brent Fulgham
Comment 3
2021-10-25 13:06:58 PDT
Comment on
attachment 442328
[details]
Patch r=me
EWS
Comment 4
2021-10-25 13:24:54 PDT
Committed
r284819
(
243511@main
): <
https://commits.webkit.org/243511@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 442328
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug