[App Privacy Report] CORS preflight requests attributed incorrectly https://bugs.webkit.org/show_bug.cgi?id=232221 <rdar://problem/84116159>

Reviewed by Brent Fulgham.

Source/WebKit:

HTTP redirects should already be marked as app-initiated or not based
on the NSURLRequest that initiated the redirect, either because the
same NSURLRequest is used or because it is set in the completion
handler of the networkDataTask->willPerformHTTPRedirection call in
NetworkSessionCocoa.

However, checking the request before calling the completion handler
can initiate CORS preflight checks that create loads that are incorrectly
marked for App Privacy Report. This patch sets the app initiated value
in the ResourceRequest object before the new NetworkDataTask is created to fix this.

* NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:
(WebKit::NetworkDataTaskCocoa::willPerformHTTPRedirection):

LayoutTests:

Layout test coverage.

* http/tests/app-privacy-report/app-attribution-cors-preflight-redirect-expected.txt: Added.
* http/tests/app-privacy-report/app-attribution-cors-preflight-redirect.html: Added.
* http/tests/app-privacy-report/resources/cors-preflight.py: Added.
* http/tests/app-privacy-report/resources/redirect-with-cors-preflight-check.py: Added.
* http/tests/app-privacy-report/user-attribution-cors-preflight-redirect-expected.txt: Added.
* http/tests/app-privacy-report/user-attribution-cors-preflight-redirect.html: Added.


Canonical link: https://commits.webkit.org/243511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284819 268f45cc-cd09-0410-ab3c-d52691b4dbfc